syntax = "proto3";

option csharp_namespace = "PortfolioMicroService";

package portfolio;

service PortfolioService {
  rpc GetAllAssets (GetAllAssetsRequest) returns (GetAllAssetsResponse);
}
message GetAllAssetsRequest {
    string guid = 1;
}
message AssetArray {
  message Asset {
    string id = 1;
    int32 volume_active = 2;
    int32 volume_frozen = 3;
    double start_price = 4;
  }
  repeated Asset assets = 1;
}
message Error {
  string error_message = 1;
  string stack_trace = 2;
}
message GetAllAssetsResponse {
  oneof result {
    AssetArray asset_array = 1;
    Error error = 2;
  }
}